tests/ui/consts/const_in_pattern/suggest_equality_comparison_instead_of_pattern_matching.stderr
error: constant of non-structural type `partial_eq::S` in a pattern
  --> $DIR/suggest_equality_comparison_instead_of_pattern_matching.rs:16:18
   |
LL |     struct S;
   |     -------- `partial_eq::S` must be annotated with `#[derive(PartialEq)]` to be usable in patterns
...
LL |     const C: S = S;
   |     ---------- constant defined here
...
LL |             Some(C) => {}
   |                  ^ constant of non-structural type
   |
note: the `PartialEq` trait must be derived, manual `impl`s are not sufficient; see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details
  --> $DIR/suggest_equality_comparison_instead_of_pattern_matching.rs:5:5
   |
LL |     impl PartialEq<S> for S {
   |     ^^^^^^^^^^^^^^^^^^^^^^^
help: add a condition to the match arm checking for equality
   |
LL -             Some(C) => {}
LL +             Some(binding) if binding == C => {}
   |

error: constant of non-structural type `partial_eq::S` in a pattern
  --> $DIR/suggest_equality_comparison_instead_of_pattern_matching.rs:17:18
   |
LL |     struct S;
   |     -------- `partial_eq::S` must be annotated with `#[derive(PartialEq)]` to be usable in patterns
...
LL |     const C: S = S;
   |     ---------- constant defined here
...
LL |             Some(C) if true => {}
   |                  ^ constant of non-structural type
   |
note: the `PartialEq` trait must be derived, manual `impl`s are not sufficient; see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details
  --> $DIR/suggest_equality_comparison_instead_of_pattern_matching.rs:5:5
   |
LL |     impl PartialEq<S> for S {
   |     ^^^^^^^^^^^^^^^^^^^^^^^
help: add a check for equality to the condition of the match arm
   |
LL -             Some(C) if true => {}
LL +             Some(binding) if true && binding == C => {}
   |

error: constant of non-structural type `partial_eq::S` in a pattern
  --> $DIR/suggest_equality_comparison_instead_of_pattern_matching.rs:20:21
   |
LL |     struct S;
   |     -------- `partial_eq::S` must be annotated with `#[derive(PartialEq)]` to be usable in patterns
...
LL |     const C: S = S;
   |     ---------- constant defined here
...
LL |         if let Some(C) = Some(S) {}
   |                     ^ constant of non-structural type
   |
note: the `PartialEq` trait must be derived, manual `impl`s are not sufficient; see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details
  --> $DIR/suggest_equality_comparison_instead_of_pattern_matching.rs:5:5
   |
LL |     impl PartialEq<S> for S {
   |     ^^^^^^^^^^^^^^^^^^^^^^^
help: check for equality instead of pattern matching
   |
LL -         if let Some(C) = Some(S) {}
LL +         if let Some(binding) = Some(S) && binding == C {}
   |

error: constant of non-structural type `partial_eq::S` in a pattern
  --> $DIR/suggest_equality_comparison_instead_of_pattern_matching.rs:21:21
   |
LL |     struct S;
   |     -------- `partial_eq::S` must be annotated with `#[derive(PartialEq)]` to be usable in patterns
...
LL |     const C: S = S;
   |     ---------- constant defined here
...
LL |         if let Some(C) = Some(S) && let Some(1) = Some(2) {}
   |                     ^ constant of non-structural type
   |
note: the `PartialEq` trait must be derived, manual `impl`s are not sufficient; see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details
  --> $DIR/suggest_equality_comparison_instead_of_pattern_matching.rs:5:5
   |
LL |     impl PartialEq<S> for S {
   |     ^^^^^^^^^^^^^^^^^^^^^^^
help: check for equality instead of pattern matching
   |
LL -         if let Some(C) = Some(S) && let Some(1) = Some(2) {}
LL +         if let Some(binding) = Some(S) && binding == C && let Some(1) = Some(2) {}
   |

error: constant of non-structural type `partial_eq::S` in a pattern
  --> $DIR/suggest_equality_comparison_instead_of_pattern_matching.rs:22:18
   |
LL |     struct S;
   |     -------- `partial_eq::S` must be annotated with `#[derive(PartialEq)]` to be usable in patterns
...
LL |     const C: S = S;
   |     ---------- constant defined here
...
LL |         let Some(C) = Some(S) else { return; };
   |                  ^ constant of non-structural type
   |
note: the `PartialEq` trait must be derived, manual `impl`s are not sufficient; see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details
  --> $DIR/suggest_equality_comparison_instead_of_pattern_matching.rs:5:5
   |
LL |     impl PartialEq<S> for S {
   |     ^^^^^^^^^^^^^^^^^^^^^^^

error: constant of non-structural type `Vec<()>` in a pattern
  --> $DIR/suggest_equality_comparison_instead_of_pattern_matching.rs:24:13
   |
LL |     const V: Vec<()> = vec![];
   |     ---------------- constant defined here
...
LL |             V => {}
   |             ^ constant of non-structural type
   |
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL
   |
   = note: `Vec<()>` is not usable in patterns
   |
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details
help: add a condition to the match arm checking for equality
   |
LL -             V => {}
LL +             binding if binding == V => {}
   |

error: constant of non-structural type `Vec<()>` in a pattern
  --> $DIR/suggest_equality_comparison_instead_of_pattern_matching.rs:27:16
   |
LL |     const V: Vec<()> = vec![];
   |     ---------------- constant defined here
...
LL |         if let V = vec![] {}
   |                ^ constant of non-structural type
   |
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL
   |
   = note: `Vec<()>` is not usable in patterns
   |
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details

error: constant of non-structural type `Vec<()>` in a pattern
  --> $DIR/suggest_equality_comparison_instead_of_pattern_matching.rs:28:13
   |
LL |     const V: Vec<()> = vec![];
   |     ---------------- constant defined here
...
LL |         let V = vec![] else { return; };
   |             ^ constant of non-structural type
   |
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL
   |
   = note: `Vec<()>` is not usable in patterns
   |
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details

error: constant of non-structural type `not_partial_eq::S` in a pattern
  --> $DIR/suggest_equality_comparison_instead_of_pattern_matching.rs:40:18
   |
LL |     struct S;
   |     -------- `not_partial_eq::S` must be annotated with `#[derive(PartialEq)]` to be usable in patterns
LL |
LL |     const C: S = S;
   |     ---------- constant defined here
...
LL |             Some(C) => {}
   |                  ^ constant of non-structural type
   |
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details
help: add a condition to the match arm checking for equality
   |
LL -             Some(C) => {}
LL +             Some(binding) if binding == C => {}
   |

error: constant of non-structural type `not_partial_eq::S` in a pattern
  --> $DIR/suggest_equality_comparison_instead_of_pattern_matching.rs:41:18
   |
LL |     struct S;
   |     -------- `not_partial_eq::S` must be annotated with `#[derive(PartialEq)]` to be usable in patterns
LL |
LL |     const C: S = S;
   |     ---------- constant defined here
...
LL |             Some(C) if true => {}
   |                  ^ constant of non-structural type
   |
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details
help: add a check for equality to the condition of the match arm
   |
LL -             Some(C) if true => {}
LL +             Some(binding) if true && binding == C => {}
   |

error: constant of non-structural type `not_partial_eq::S` in a pattern
  --> $DIR/suggest_equality_comparison_instead_of_pattern_matching.rs:44:21
   |
LL |     struct S;
   |     -------- `not_partial_eq::S` must be annotated with `#[derive(PartialEq)]` to be usable in patterns
LL |
LL |     const C: S = S;
   |     ---------- constant defined here
...
LL |         if let Some(C) = Some(S) {}
   |                     ^ constant of non-structural type
   |
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details
help: check for equality instead of pattern matching
   |
LL -         if let Some(C) = Some(S) {}
LL +         if let Some(binding) = Some(S) && binding == C {}
   |

error: constant of non-structural type `not_partial_eq::S` in a pattern
  --> $DIR/suggest_equality_comparison_instead_of_pattern_matching.rs:45:21
   |
LL |     struct S;
   |     -------- `not_partial_eq::S` must be annotated with `#[derive(PartialEq)]` to be usable in patterns
LL |
LL |     const C: S = S;
   |     ---------- constant defined here
...
LL |         if let Some(C) = Some(S) && let Some(1) = Some(2) {}
   |                     ^ constant of non-structural type
   |
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details
help: check for equality instead of pattern matching
   |
LL -         if let Some(C) = Some(S) && let Some(1) = Some(2) {}
LL +         if let Some(binding) = Some(S) && binding == C && let Some(1) = Some(2) {}
   |

error: constant of non-structural type `not_partial_eq::S` in a pattern
  --> $DIR/suggest_equality_comparison_instead_of_pattern_matching.rs:46:18
   |
LL |     struct S;
   |     -------- `not_partial_eq::S` must be annotated with `#[derive(PartialEq)]` to be usable in patterns
LL |
LL |     const C: S = S;
   |     ---------- constant defined here
...
LL |         let Some(C) = Some(S) else { return; };
   |                  ^ constant of non-structural type
   |
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details

error: aborting due to 13 previous errors

